lists/failed/Travel
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''Travel'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://packagemanager.posit.co/cran/__linux__/jammy/2023-04-20
Bioconductor version 3.16 (BiocManager 1.30.20), R 4.2.3 (2023-03-15)
Installing package(s) 'Travel'
also installing the dependencies ‘bookdown’, ‘BiocStyle’, ‘inline’

trying URL 'https://packagemanager.posit.co/cran/__linux__/jammy/2023-04-20/src/contrib/bookdown_0.33.tar.gz'
Content type 'binary/octet-stream' length 1085608 bytes (1.0 MB)
==================================================
downloaded 1.0 MB

trying URL 'https://bioconductor.org/packages/3.16/bioc/src/contrib/BiocStyle_2.26.0.tar.gz'
Content type 'application/gzip' length 757136 bytes (739 KB)
==================================================
downloaded 739 KB

trying URL 'https://packagemanager.posit.co/cran/__linux__/jammy/2023-04-20/src/contrib/inline_0.3.19.tar.gz'
Content type 'binary/octet-stream' length 127424 bytes (124 KB)
==================================================
downloaded 124 KB

trying URL 'https://bioconductor.org/packages/3.16/bioc/src/contrib/Travel_1.6.0.tar.gz'
Content type 'application/gzip' length 439285 bytes (428 KB)
==================================================
downloaded 428 KB

* installing *binary* package ‘bookdown’ ...
* ‘bookdown’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘bookdown’ as ‘bookdown_0.33_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (bookdown)
* installing *binary* package ‘inline’ ...
* ‘inline’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘inline’ as ‘inline_0.3.19_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (inline)
* installing *source* package ‘Travel’ ...
** using staged installation
** libs
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c Cpp_interface.cpp -o Cpp_interface.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altfile_operations.cpp -o altfile_operations.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altmmap_operations.cpp -o altmmap_operations.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altrep_manager.cpp -o altrep_manager.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Cache_block.cpp -o class_Cache_block.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Filesystem_cache_copier.cpp -o class_Filesystem_cache_copier.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Filesystem_file_data.cpp -o class_Filesystem_file_data.o
In file included from class_Filesystem_file_data.h:5,
                 from class_Filesystem_file_data.cpp:1:
class_Cache_block.h:10:5: error: ‘size_t’ does not name a type
   10 |     size_t size;
      |     ^~~~~~
class_Cache_block.h:1:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
  +++ |+#include <cstddef>
    1 | #ifndef HEADER_CACHE_BLOCK
class_Cache_block.h:11:5: error: ‘size_t’ does not name a type
   11 |     size_t *counter = nullptr;
      |     ^~~~~~
class_Cache_block.h:11:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:14:23: error: expected ‘)’ before ‘size’
   14 |     Cache_block(size_t size);
      |                ~      ^~~~~
      |                       )
class_Cache_block.h:21:5: error: ‘size_t’ does not name a type
   21 |     size_t use_count() const;
      |     ^~~~~~
class_Cache_block.h:21:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:23:5: error: ‘size_t’ does not name a type
   23 |     size_t get_size() const;
      |     ^~~~~~
class_Cache_block.h:23:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:27:5: error: ‘size_t’ does not name a type
   27 |     size_t get_serialize_size() const;
      |     ^~~~~~
class_Cache_block.h:27:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Filesystem_file_data.cpp: In member function ‘size_t Filesystem_file_data::get_serialize_size()’:
class_Filesystem_file_data.cpp:70:26: error: ‘const class Cache_block’ has no member named ‘get_serialize_size’
   70 |         size += i.second.get_serialize_size();
      |                          ^~~~~~~~~~~~~~~~~~
class_Filesystem_file_data.cpp: In member function ‘void Filesystem_file_data::serialize(void*)’:
class_Filesystem_file_data.cpp:92:39: error: ‘const class Cache_block’ has no member named ‘get_serialize_size’
   92 |         size_t buffer_size = i.second.get_serialize_size();
      |                                       ^~~~~~~~~~~~~~~~~~
class_Filesystem_file_data.cpp: In member function ‘void Filesystem_cache_index_iterator::compute_block_info()’:
class_Filesystem_file_data.cpp:177:39: error: ‘class Cache_block’ has no member named ‘get_size’
  177 |     block_length = block_iter->second.get_size() / type_size;
      |                                       ^~~~~~~~
make: *** [/usr/local/lib/R/etc/Makeconf:178: class_Filesystem_file_data.o] Error 1
ERROR: compilation failed for package ‘Travel’
* removing ‘/tmp/tmp/built/Travel’
* installing *source* package ‘BiocStyle’ ...
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘BiocStyle’ as ‘BiocStyle_2.26.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (BiocStyle)

The downloaded source packages are in
	‘/tmp/RtmpitcCjh/downloaded_packages’
Warning message:
In install.packages(...) :
  installation of package ‘Travel’ had non-zero exit status

real	0m48.677s
user	0m37.672s
sys	0m3.054s
